--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,7 @@ default: &default
 development:
   <<: *default
   database: Yelp-Clone_development
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,6 +60,7 @@ development:
 test:
   <<: *default
   database: Yelp-Clone_test
+  host: localhost
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
